--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,13 @@
 </p>
 
 <p>
+  <strong>Portrait:</strong>
+  <%#= link_to @user.profile_image.filename, @user.profile_image if @user.profile_image.attached? %>
+
+  <%= image_tag @user.profile_image.variant(resize_to_limit: [100, 100]) if @user.profile_image.attached? %>
+</p>
+
+<p>
   <strong>Email:</strong>
   <%= @user.email %>
 </p>
